Changes for 3.2.10rc1

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 3.2.9

3.2.9rc1 was released as 3.2.9 without any changes

--------------------------------------------------------------------------------
Changes for 3.2.9rc1

New features:
...G...PS. [ZBXNEXT-1862] modified server, proxy and agent to follow changes in /etc/resolv.conf (Andris)

Bug fixes:
..F....... [ZBX-12788] fixed error when template is added to hosts via mass update form (gcalenko, vmurzins)
..F....... [ZBX-12666] fixed ETag comparison check in jsLoader for web server with enabled compression (gcalenko)
........S. [ZBX-10547] fixed IT services calculation in parallel transactions not seeing each other changes when calculating common parent service (vso)
........S. [ZBX-12441] fixed user permission check for macros containing user personal information in notification messages (viktors)
....I..... [ZBX-12779] fixed detection of PostgreSQL 10 (Andris)
.......P.. [ZBX-12281] fixed simultaneous sending of the same history data from passive proxy (gleb, vjaceslavs)
..F....... [ZBX-12770] fixed links in select popup for user groups; updated group selection field in Administration->Users (gcalenko)
A......... [ZBX-8277] improved performance of hostgeneral.unlink() method; fixed SQL statement (Sasha)
........S. [ZBX-11426] fixed the housekeeper for not deleting events in open problem state (abs)
A......... [ZBX-10754] fixed inheritance of template properties in web scenarios (miks)
A......... [ZBX-12681] fixed SQL errors in event.get() method (Sasha)
A......... [ZBX-12727] fixed response for script.get() method with "editable" flag (Sasha)
A......... [ZBX-12727] fixed dcheck.get(), dhost.get() and dservice.get() permission checks for admin users; related to ZBX-7238 (Sasha)

--------------------------------------------------------------------------------
Changes for 3.2.8

3.2.8rc1 was released as 3.2.8 without any changes
